fix: align banners with day for small desktops

--- a/src/routes/Calendar/Table/Cell/Cell.less
+++ b/src/routes/Calendar/Table/Cell/Cell.less
@@ -192,6 +192,7 @@
 
         .items {
             width: 100%;
+            padding-left: 0.5rem;
         }
     }
 }
